--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
     <div id="master">
 
         <header>
-          <h1>eddi milkovitsch</h1>
+            <h1>eddi milkovitsch</h1>
+            <nav>
+                <ul id="main_menu">
+                  <li class="home"><a href="#">home</a></li>
+                  <li class="about"><a href="#">about</a></li>
+                  <li class="exibitions"><a href="#">exibitions</a></li>
+                  <li class="works"><a href="#">works</a></li>
+                  <li class="contact"><a href="#">contact</a></li>
+                </ul>
+            </nav>
         </header>
-
-        <nav>
-            <ul id="main_menu">
-              <li class="home"><a href="#">home</a></li>
-              <li class="about"><a href="#">about</a></li>
-              <li class="exibitions"><a href="#">exibitions</a></li>
-              <li class="works"><a href="#">works</a></li>
-              <li class="contact"><a href="#">contact</a></li>
-            </ul>
-        </nav>
 
         <section>
             <article>
@@ -46,5 +45,7 @@
             </div>
         </footer>
     </div>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
