--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
 
-    <div id="master">
+    <div id="home">
 
         <header>
             <h1>eddi milkovitsch</h1>
-            <nav>
+            <nav id="navbar">
                 <ul id="main_menu">
                   <li class="home"><a href="#">home</a></li>
                   <li class="about"><a href="#">about</a></li>
@@ -27,7 +27,17 @@
         </header>
 
         <section>
-            <article>
+            <article id="about">
+                <h2>About</h2>
+            </article>
+            <article id="exibitions">
+                <h2>Exibitions</h2>
+            </article>
+            <article id="works">
+                <h2>Works</h2>
+            </article>
+            <article id="contact">
+                <h2>Contact</h2>
             </article>
         </section>
 
@@ -41,11 +51,11 @@
                 </ul>
             </div>
             <div class="copyright">
-                <p>&copy; 2014 W3Schools. All rights reserved.</p>
+                <p>&copy; 2014 Eddi Milkovitsch. All rights reserved.</p>
             </div>
         </footer>
     </div>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/jquery-2.1.1.min.js"></script>
+    <script src="js/eddimikovitsch.js"></script>
 </body>
 </html>
