--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Eddi Milkovitsch</title>
+    <link rel="stylesheet" type="text/css" href="./css/image_gallery/jquery.galleryview-3.0-dev.css">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
     <link rel="stylesheet" href="./css/main.css" type="text/css">
     <link rel="stylesheet" href="./css/font-awesome.min.css" type="text/css">
@@ -35,6 +36,28 @@
             </article>
             <article id="works">
                 <h2>Works</h2>
+                <div id="image_gallery_wrapper">
+                    <ul id="image_gallery">
+                        <li><img src="./images/works/alfabeto_colore.jpg" alt="Alfabeto Colore" title="Alfabeto Colore" data-description="Some more information about the photo"></li>
+                        <li><img src="./images/works/anc_cartulam.jpg" alt="Cartulam" title="Cartulam" data-description=""></li>
+                        <li><img src="./images/works/effe.jpg" alt="Effe" title="Effe" data-description=""></li>
+                        <li><img src="./images/works/extrema_ratio.jpg" alt="Extrema Ratio" title="Extrema Ratio" data-description=""></li>
+                        <li><img src="./images/works/frammenti.jpg" alt="Frammenti" title="Frammenti" data-description=""></li>
+                        <li><img src="./images/works/la_noble_art.jpg" alt="La Noble Art" title="La Noble Art" data-description=""></li>
+                        <li><img src="./images/works/la_strada_1.jpg" alt="La Strada 1" title="La Strada 1" data-description=""></li>
+                        <li><img src="./images/works/la_strada_2.jpg" alt="La Strada 2" title="La Strada 2" data-description=""></li>
+                        <li><img src="./images/works/monocromo_patinato.jpg" alt="Monocromo Patinato" title="Monocromo Patinato" data-description=""></li>
+                        <li><img src="./images/works/nihil_minus.jpg" alt="Nihil Minus" title="Nihil Minus" data-description=""></li>
+                        <li><img src="./images/works/nocturne.jpg" alt="Nocturne" title="Nocturne" data-description=""></li>
+                        <li><img src="./images/works/osservatore_osservato.jpg" alt="Osservatore Osservato" title="Osservatore Osservato" data-description=""></li>
+                        <li><img src="./images/works/primi_passi.jpg" alt="Primi Passi" title="Primi Passi" data-description=""></li>
+                        <li><img src="./images/works/senza_titolo.jpg" alt="Senza Titolo" title="Senza Titolo" data-description=""></li>
+                        <li><img src="./images/works/tavola_n_2.jpg" alt="Tavola n.2" title="Tavola n.2" data-description=""></li>
+                        <li><img src="./images/works/tomo_primo.jpg" alt="Tomo Primo" title="Tomo Primo" data-description=""></li>
+                        <li><img src="./images/works/traditio_cartae.jpg" alt="Traditio Cartae" title="Traditio Cartae" data-description=""></li>
+                        <li><img src="./images/works/untitled_1.jpg" alt="Untitled 1" title="Untitled 1" data-description=""></li>
+                </ul>
+                </div>
             </article>
             <article id="contact">
                 <h2>Contact</h2>
@@ -57,5 +80,12 @@
     </div>
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/eddimikovitsch.js"></script>
+    <script src="js/jquery.galleryview-3.0-dev.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/jquery.timers-1.2.js"></script>
+    <script>$(function(){
+        $('#image_gallery').galleryView();})
+    </script>
+    
 </body>
 </html>
