Added a linkedin button

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     <li class="social facebook"><a href="//www.facebook.com/" class="btn-social btn-outline"><i class="fa fa-facebook"></i></a></li>
                     <li class="social gplus"><a href="//plus.google.com/" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a></li>
                     <li class="social twitter"><a href="//twitter.com/" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a></li>
+                    <li class="social linkedin"><a href="//linkedin.com/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
                 </ul>
             </div>
             <div class="copyright">
