--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             <div class="menu">
                 <ul class="social">
                     <li class="description">Let’s Connect! <b>Stay in Touch</b></li>
-                    <li class="social facebook"><a href="//www.facebook.com/" class="btn-social btn-outline"><i class="fa fa-facebook"></i></a></li>
-                    <li class="social gplus"><a href="//plus.google.com/" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a></li>
-                    <li class="social twitter"><a href="//twitter.com/" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a></li>
-                    <li class="social linkedin"><a href="//linkedin.com/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
+                    <li class="social facebook"><a href="http://www.facebook.com/" class="btn-social btn-outline" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                    <li class="social gplus"><a href="http://plus.google.com/" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-google-plus"></i></a></li>
+                    <li class="social twitter"><a href="http://twitter.com/" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-twitter"></i></a></li>
+                    <li class="social linkedin"><a href="http://linkedin.com/" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a></li>
                 </ul>
             </div>
             <div class="copyright">
