--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Eddi Milkovitsch</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-    <link rel="stylesheet"  href="css/lightSlider.css">
-    <link rel="stylesheet"  href="css/lightGallery.css">
+    <link rel="stylesheet" href="css/lightSlider.css">
+    <link rel="stylesheet" href="css/lightGallery.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
@@ -31,6 +31,30 @@
         <section>
             <article id="about">
                 <h2>About</h2>
+                <div class="multi_column">
+                    <p>Born in Trieste (Italy) in 1957, where he lives and works.<br/>
+                    Self-taught.</p>
+                    <p>Member of the "Incipit" Calligraphic Club</p>
+                    <p>From 2002 part of Maria Campitelli's "GRUPPO78"</p>
+                    <p>From 2004 part of the "UNA Academy"</p>
+                    <p>High school surveyor and works manager diploma and a diploma in Archive management, Paleography and Diplomatics, issued by the Record Office of Trieste.</p>
+                    <p>Currently working at the Chamber of Commerce, Industry, Craft and Agriculture of Trieste (Italy)</p>
+                </div>
+                <div class="multi_column">
+                    <p>I feel attracted to letters and I am irresistibly attracted to alphabets.</p>
+                    <p>Writing, especially relief writing, is currently the most relevant subject among my artistic pursuits. And paper.</p>
+                    <p>Whether plain or expensive, coloured, written or torn up. Newspapers, book or magazine pages, drawing paper, industrially produced or hand made paper. But always strictly second-hand.</p>
+                    <p>I cannot explain this love for paper and alphabets, but what I do feel is the need to manipulate these materials, to mix and assemble them. Maybe it is because I have worked surrounded by paper over the last fifteen years, among dusty administrative archives, among typewritten flimsies and the most varied handwritten foolscap sheets.</p>
+                    <p>Probably, the daily sight of rows and rows of different size and shape cardbord boxes filled with documents, might have fueled my insane passion towards such fragile material.</p>
+                    <p>I do not know if I can consider myself an artist, I am devoid of proper artistic training, I am a self-taught artist.</p>
+                    <p>I have never studied art, except for a brief period of time (many years ago) during a nude drawing course held at the Revoltella Museum by Professor Nino Perizi, who was also my art teacher in middle school.</p>
+                </div>
+                <div class="multi_column">
+                    <p>Although I have always possessed a fair amout of dexterity, I must say that I have found my true artistic calling only over these past few years, thanks to the contacts I have had with a calligraphy club and an enlightening participation to a course held by Jean Larcher on the art of embossing.</p>
+                    <p>I will not hide the fact that I am not a calligrapher, and I feel immense admiration for those who are capable of writing so beautifully. I have deepened my knowledge by enrolling in a two-year course dedicated to "Archive management, paleography and diplomatics" held by the Record Office.</p>
+                    <p>My first real approach to the artistic world took place only at the end of 2001, in the study of Paolo Cervi Kervischer, by participating to the activities the artist himself promotes.</p>
+                    <p>The encounter with the artist Ciro Gallo, joining Maria Campitelli 's GRUPPO78 and, more recently, joining the UNA Academy of Trieste, constitute the latest phase of my ongoing artistic journey.</p>
+                </div>
             </article>
             <article id="exibitions">
                 <h2>Exibitions</h2>
