--- a/index.html
+++ b/index.html
@@ -85,16 +85,20 @@
             <article id="contact">
                 <h2>Contact</h2>
 
+
                 <div id="form-main">
                     <div id="form-div">
                         <form class="form" id="form1">
                             <p class="name">
-                                <input name="name" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Name" id="name" />
+                                <i class="contact-icon fa fa-user fa-2x"></i>
+                                <input name="name" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Name" id="name" autofocus/>
                             </p>
                             <p class="email">
-                                <input name="email" type="text" class="validate[required,custom[email]] feedback-input" id="email" placeholder="Email" />
+                                <i class="contact-icon fa fa-envelope fa-2x"></i>
+                                <input name="email" type="email" class="validate[required,custom[email]] feedback-input" id="email" placeholder="Email"/>
                             </p>
                             <p class="text">
+                                <i class="contact-icon fa fa-pencil fa-2x"></i>
                                 <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="comment" placeholder="Comment"></textarea>
                             </p>  
                             <div class="submit">
@@ -104,6 +108,7 @@
                         </form>
                     </div>
                 </div>
+
             </article>
         </section>
 
